<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/Title_Style"
        android:text="@string/title_setup_three"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:text="@string/tv_setup_two_content"/>

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bt_select_number"
        android:text="@string/btn_open_contact"
        android:background="@drawable/selector_next_btn_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:background="@android:drawable/presence_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:background="@android:drawable/presence_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:background="@android:drawable/presence_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:background="@android:drawable/presence_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            style="@style/Pre_Page"/>
        <Button
            style="@style/Next_Page"/>

<!--   <Button
            android:onClick="prePage"
            android:text="@string/setup_pre_page"
            android:background="@drawable/selector_next_btn_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>
        <Button
            android:onClick="prePage"
            android:text="@string/setup_next_page"
            android:background="@drawable/selector_next_btn_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>-->
    </RelativeLayout>

</LinearLayout>